<resources>
    <string name="app_name">contacts</string>

    <string name="type">type</string>
    <string name="import_contacts">import contacts</string>
    <string name="find">find</string>
    <string name="all_subscribers">all subscribers</string>
    <string name="find_subscribers">find subscribers</string>
    <string name="call_on_phone">call on phone</string>
    <string name="call_on_home_phone">call on home phone</string>
    <string name="find_name">find name</string>
    <string name="find_group">find group</string>
    <string name="find_email">find email</string>
    <string name="find_number">find number</string>
    <string name="find_home_number">find home number</string>
    <string name="create">create</string>
    <string name="back">back11</string>
    <string name="time">time</string>
    <string name="create_number">create number</string>
    <string name="date">date</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="delete_all">delete all</string>
    <string name="write_group">write group</string>
    <string name="write_home_number">write home number</string>
    <string name="write_number">write number</string>
    <string name="save">save</string>
    <string name="text_email">text Email</string>
    <string name="subject">subject</string>
    <string name="about_item">about the application</string>
    <string name="cancel">cancel</string>
    <string name="send_email">send email</string>
    <string name="write_email">write email</string>
    <string name="write_name">write name</string>


    <string name="title_activity_fullscreen" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="item_description">" about the application"</string>
</resources>
